force-app/main/default/objects/EventSessionTicketJunction__c/EventSessionTicketJunction__c.object-meta.xml
<CustomObject>
    <label>Event/Session Ticket Junction</label>
    <nameField>
        <displayFormat>ESTJ-{0000000000}</displayFormat>
        <label>Event Ticket Session Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event/Session Ticket Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>