force-app/main/default/objects/EventSessionTicketJunction__c/fields/Event_custom__c.field-meta.xml
<CustomField>
    <fullName>Event_custom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event custom</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipName>Event_Ticket_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>