force-app/main/default/objects/EventSessionTicketJunction__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session</label>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Event/Session Ticket Junctions</relationshipLabel>
    <relationshipName>Ticket_Session_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>