force-app/main/default/objects/EventSessionTicketJunction__c/fields/Ticket__c.field-meta.xml
<CustomField>
    <fullName>Ticket__c</fullName>
    <label>Ticket</label>
    <referenceTo>Ticket__c</referenceTo>
    <relationshipName>Event_Ticket_Session_Junctions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>